fix: Fix spacing of language selector links
Language selector `ul` is now a grid, just like the icons.

--- a/layouts/_default/baseof.header-critical.css
+++ b/layouts/_default/baseof.header-critical.css
@@ -77,10 +77,6 @@ header .menu__icons {
 }
 
 body > header .icons {
-  display: inline-block;
-}
-
-header .icons-grid {
   display: grid;
   gap: 0.75rem;
   grid-auto-flow: column;
