--- a/layouts/_default/baseof.header-languages.css
+++ b/layouts/_default/baseof.header-languages.css
@@ -1,14 +1,12 @@
 .languages {
-  display: inline-block;
+  display: grid;
+  grid-auto-flow: column;
+  gap: 0.75rem;
   list-style: none;
   padding: 0;
+  margin: 0 0.75rem;
   text-transform: uppercase;
   font-weight: 700;
-}
-
-.languages li {
-  display: inline-block;
-  margin-right: 0.75rem;
 }
 
 .languages a {
